--- a/src/app/components/admin/app-version/last-app-version/last-app-version.component.html
+++ b/src/app/components/admin/app-version/last-app-version/last-app-version.component.html
@@ -29,9 +29,14 @@
         -->
 
         <p>Lea las capacidades de la app en las notas de cada versión. 
-            Las vesiones superiores siempre añaden capacidades sobre la versión anterior:</p>
+            Las veriones superiores siempre añaden capacidades sobre la versión anterior:</p>
     </div>
     <div class="flexbox-responsive-interior-container">
+        <h6>Código QR para acceder a esta página de descarga</h6>
+        <div>
+            <img class="qr" src="images/qr_descarga.png" matTooltip="QR para esta página">
+        </div>
+
         @if (lastMobileAppVersionModel.id>-1){
             <h6>Descargue la última versión de la App</h6>
             <div class="flex_container">
