Añadido QR al componente last-app-version

--- a/src/app/components/admin/app-version/last-app-version/last-app-version.component.html
+++ b/src/app/components/admin/app-version/last-app-version/last-app-version.component.html
@@ -32,6 +32,12 @@
             Las vesiones superiores siempre añaden capacidades sobre la versión anterior:</p>
     </div>
     <div class="flexbox-responsive-interior-container">
+
+        <h6>Código QR para acceder a esta página de descarga</h6>
+        <div>
+            <img class="qr" src="images/qr_descarga.png" matTooltip="QR para esta página">
+        </div>
+
         @if (lastMobileAppVersionModel.id>-1){
             <h6>Descargue la última versión de la App</h6>
             <div class="flex_container">
